`wmap#each` should check liveness of keys

`ObjectSpace::WeakMap#each*` should check key's liveness.
fix [Bug #18586]